--- a/app/views/rols/admi.html.erb
+++ b/app/views/rols/admi.html.erb
@@ -1,5 +1,5 @@
   <center><h1><b> Admin view</b></h1></center> 
-<a href= "/users/create_user" class="btn btn-success"><b>Create User</b></a>
+<a href= "<%= create_user_path %>" class="btn btn-success"><b>Create User</b></a>
 
 
 <h1><b>USERS</b></h1>
