--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <%= javascript_include_tag "jquery.ui.addresspicker" %>
   <%= javascript_include_tag "alert" %>
 </head>
-<body background="\images\fondo.jpeg">
+<body background="\images\fondo1.jpg">
   <br><br><br><br><br>
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container-fluid">
@@ -23,7 +23,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <img align= "left" src="\images\Monitor.png" alt="rss feed" width="75" />
+          <img align= "left" src="\images\innova.png" alt="rss feed" width="75" />
           <a class="navbar-brand" href=" <%= root_path %> ">Inicio</a>
         </div>
 
