--- a/app/views/rols/_form2.html.erb
+++ b/app/views/rols/_form2.html.erb
@@ -11,6 +11,27 @@
     <div class="container">
 
       	<form action="/user/save" method="post" class="form-horizontal" role="form">
+         <div class="form-group">
+          <label for="inputName3" class="col-sm-2 control-label">Nombre(s)</label>
+          <div class="col-sm-7">
+            <input type="text" class="textboxgrade" id="inputEmail3" placeholder="Nombre(s)" required="required" name="name" value="<%= @user.name %>">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="inputLastname3" class="col-sm-2 control-label">Apellidos</label>
+          <div class="col-sm-7">
+            <input type="text" class="textboxgrade" id="inputEmail3" placeholder="Apellidos" required="required" name="lastname" value="<%= @user.lastname %>">
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="inputLastname3" class="col-sm-2 control-label">Telefono</label>
+          <div class="col-sm-7">
+            <input type="number" class="textboxgrade" id="inputEmail3" placeholder="Telefono" required="required" name="telf" value="<%= @user.telf %>">
+          </div>
+        </div>
+
+
         <div class="form-group">
           <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
           <div class="col-sm-7">
